syntax = "proto3";

option go_package = "gitlab.com/ConsenSys/client/fr/core-stack/pkg.git/types/chain";

package chain;

// Information about a Chain
message Protocol {
    // Type of a protocol that should be used
    ProtocolType type = 1;

    // Extra information (optional)
    map<string, string> extra = 3;
}

enum ProtocolType {
    ETHEREUM_CONSTANTINOPLE = 0;
    QUORUM_CONSTELLATION = 1;
    QUORUM_TESSERA = 2;
    PANTHEON_ORION = 3;
}

